apps-tempo/test-azure-apps/tempo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-frontend
  namespace: tempo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ${K_TEMPO_DNS_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo-query-frontend-discovery
                port:
                  number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trace-frontend
  namespace: tempo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ${K_TRACE_DNS_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo-distributor-discovery
                port:
                  number: 4318
